<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding"
    android:background="@color/body">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="1.5in"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_03_2021_sexta_feira"
            android:textSize="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/hora"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17_37"
            android:textSize="10dp"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/add_titulo"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:inputType="textAutoComplete"
            android:textSize="16dp"
            android:layout_below="@id/data"
            android:autofillHints="" />

        <EditText
            android:id="@+id/add_descricao"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/descri_o"
            android:inputType="textAutoComplete"
            android:textSize="16dp"
            android:layout_below="@id/add_titulo"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints="" />
        <Button
            android:id="@+id/button_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/body"
            android:text="@string/guardar"
            android:onClick="Editar"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/big_padding" />
    </RelativeLayout>



</RelativeLayout>
