<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/body"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="1.5in"
        >
    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        />




                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/login_hint"
                    android:layout_below="@id/tv_heading"

                    />



                <EditText
                    android:textColorHint="@color/login_hint"
                    android:id="@+id/et_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:layout_below="@id/et_email"
                    />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:onClick="performSignUp"
                android:textAllCaps="false"
                android:layout_below="@id/et_password"
                android:layout_marginTop="@dimen/big_padding"
                />
    </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_already_have_account"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="1.0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/top"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="@string/already_have_an_account"
                    />

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:text="Sign Up"
                    android:onClick="goToSignup"

                    />

            </LinearLayout>
</RelativeLayout>